syntax = "proto3";
package osmosis.lockup;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/osmosis-labs/osmosis/v7/x/lockup/types";

// PeriodLock is a single unit of lock by period. It's a record of locked coin
// at a specific time. It stores owner, duration, unlock time and the amount of
// coins locked.
message PeriodLock {
  uint64 ID = 1;
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  google.protobuf.Duration duration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration\""
  ];
  google.protobuf.Timestamp end_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"end_time\""
  ];
  repeated cosmos.base.v1beta1.Coin coins = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated string secondary_indexes = 6
      [ (gogoproto.moretags) = "yaml:\"secondary_indexes\"" ];
  repeated string unlock_blockers = 7
      [ (gogoproto.moretags) = "yaml:\"unlock_blockers\"" ];
}

enum LockQueryType {
  option (gogoproto.goproto_enum_prefix) = false;

  ByDuration = 0; // Queries for locks that are longer than a certain duration
  ByTime = 1;     // Queries for lockups that started before a specific time
}

message QueryCondition {
  // type of lock query, ByLockDuration | ByLockTime
  LockQueryType lock_query_type = 1;
  // What token denomination are we looking for lockups of
  string denom = 2;
  // valid when query condition is ByDuration
  google.protobuf.Duration duration = 3 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"duration\""
  ];
  // valid when query condition is ByTime
  google.protobuf.Timestamp timestamp = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];
  // secondary indexes to query on
  // must satisfy all included seconary indexes
  repeated string secondary_indexes = 5
      [ (gogoproto.moretags) = "yaml:\"secondary_indexes\"" ];
}
